<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false" xliff:restype="x-_UNLIMITED">Folding@Home</string>
    <string name="notification_service_finished_job_executed" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE/EXPANDED">You have contributed to science</string>
    <string name="notification_service_finished_failed" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE/EXPANDED">Not all starting conditions were met</string>
    <string name="contributed_time" xliff:restype="x-GENERIC/LIST/TITLE">Contributed time</string>
    <string name="people_helping" xliff:restype="x-GENERIC/LIST/TITLE">People helping out</string>
    <string name="research_type" xliff:restype="x-GENERIC/LIST/TITLE">Research type</string>
    <string name="research_type_unavailable" xliff:restype="x-GENERIC/LIST/TITLE">Unavailable</string>
    <string name="setup_guide" xliff:restype="x-GENERIC/MENU/OVERFLOW">Setup guide</string>
    <string name="legal" xliff:restype="x-GENERIC/MENU/OVERFLOW">Legal</string>
    <string name="share" xliff:restype="x-GENERIC/MENU/OVERFLOW">Share</string>
    <string name="welcome" xliff:restype="x-GENERIC/LIST/TITLE">Welcome to Folding@Home</string>
    <string name="read_more" xliff:restype="x-GENERIC/BUTTON/1BUTTON">Read more</string>
    <string name="more_info" xliff:restype="x-GENERIC/SUBHEADER">More information</string>
    <string name="finish" xliff:restype="x-GENERIC/BUTTON/3BUTTONS">Finish</string>
    <string name="wizard_welcome_to_folding_subtitle" xliff:restype="x-_UNLIMITED">Do you want to help find the cure for Alzheimer\'s, Parkinson\'s and cancer?</string>
    <string name="wizard_welcome_to_folding_text" xliff:restype="x-_UNLIMITED">Your phone can perform scientific calculations while you sleep, and help Stanford University scientists find the cure for many diseases.</string>
    <string-array name="help_find_cure" xliff:restype="x-_UNLIMITED">

        
        <item>By signing up for Folding@Home, you help Stanford University scientists in their quest to find the cure for many of our most common diseases by donating your phone\'s processing power when you aren\'t using it yourself.</item>
        
        <item>Folding refers to protein activities in our bodies. The research of protein folding requires so many calculations that Stanford University asks people to donate their phones\' unused processing power to crunch some of the numbers. When you sleep, Stanford University will send a folding problem for your phone to solve. Once calculations are complete, the results are sent back to Stanford.</item>
        
        <item>You can find more information about Folding@Home on the homepage:\nfolding.stanford.edu</item>
    </string-array>
    <string name="powered_by" xliff:restype="x-GENERIC/LIST/SUBTITLE">powered by</string>
    <string name="private_date_safe_title" xliff:restype="x-GENERIC/LIST/TITLE/ICON">Your private data is safe.</string>
    <string name="private_date_safe_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">This application doesn\'t access your private data.</string>
    <string name="no_cost_mobile_data_title" xliff:restype="x-GENERIC/LIST/TITLE/ICON">There is no cost for mobile data</string>
    <string name="no_cost_mobile_data_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">Phone must be connected to Wi-Fi network.</string>
    <string name="battery_not_drained_title" xliff:restype="x-GENERIC/LIST/TITLE/ICON">The battery will not be drained</string>
    <string name="battery_not_drained_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">The phone must be connected to a charger and fully charged (100%)</string>
    <string name="time_string_weeks" xliff:restype="x-_UNLIMITED">%1$dw %2$dd %3$dh</string>
    <string name="time_string_days" xliff:restype="x-_UNLIMITED">%1$dd %2$dh %3$dm</string>
    <string name="time_string_hours" xliff:restype="x-_UNLIMITED">%1$dh %2$dm</string>
    <string name="facebook" translatable="false" xliff:restype="x-_UNLIMITED">Facebook</string>
    <string name="share_facebook_success" xliff:restype="x-GENERIC/TOAST/TEXT">Successfully shared on Facebook</string>
    <string name="share_facebook_error" xliff:restype="x-GENERIC/TOAST/TEXT">Could not share on Facebook</string>
    <string name="waiting" xliff:restype="x-GENERIC/DIALOG/PROGRESS">Sharing…</string>
    <string name="share_object_message" xliff:restype="x-_UNLIMITED">I\'m one of %1$d people helping out and I\'ve contributed with %2$s of calculation time!</string>
    <string name="notification_service_executing_job" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE/EXPANDED">Folding@Home is running.\nYou are contributing to scientific research.</string>
    <string name="notification_service_not_executing" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE/EXPANDED">Folding@Home is not running.\nAll starting conditions are not met.</string>
    <string name="settings" xliff:restype="x-GENERIC/MENU/OVERFLOW">Settings</string>
    <string name="start_contribute" xliff:restype="x-GENERIC/LIST/TITLE/SWITCH">Starting time</string>
    <string name="start_contribute_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/CONTROL/ICON">Set start time for calculation</string>
    <string name="wifi" xliff:restype="x-GENERIC/LIST/TITLE/SWITCH">Wi-Fi</string>
    <string name="settings_auto_wifi_msg" xliff:restype="x-GENERIC/LIST/SUBTITLE/CONTROL/ICON">Enable Wi-Fi during contribution</string>
    <string name="notifications" xliff:restype="x-GENERIC/LIST/TITLE/SWITCH">Notifications</string>
    <string name="settings_display_notification" xliff:restype="x-GENERIC/LIST/SUBTITLE/CONTROL/ICON">Send notifications at the end of calculation</string>
    <string name="contribution_interval_time" xliff:restype="x-GENERIC/LIST/SUBTITLE">Contribution duration</string>
    <string name="wizard_step" xliff:restype="x-GENERIC/BUTTON/3BUTTONS">Step %1$d/%2$d</string>
    <string name="no_opencl" xliff:restype="x-UNLIMITED">This device does not support OpenCL. This library is essential to execute jobs. Would you like to continue?</string>
    <string name="connect_to_wifi" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">The phone needs to be connected to a Wi-Fi network</string>
    <string name="processing_time_title" xliff:restype="x-GENERIC/LIST/TITLE/ICON">Calculation time is between %1$s – %2$s</string>
    <string name="processing_time_text" xliff:restype="x-GENERIC/LIST/SUBTITLE/ICON">You can change start time in settings.</string>
    <string name="will_start_when" xliff:restype="x-GENERIC/DIALOG/TITLE">Starting conditions</string>
    <string name="share_facebook_contribution" xliff:restype="x-GENERIC/BUTTON/1BUTTON">Share on Facebook</string>
    <string name="app_disabled_title" xliff:restype="x-GENERIC/DIALOG/TITLE/ICON">Application disabled </string>
    <string name="app_disabled_message" xliff:restype="x-UNLIMITED">This application is disabled and cannot be used any longer.</string>
    <string name="stand_by" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE">Stand by </string>
    <string name="helping_out" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE">Helping out</string>
    <string name="disabled" xliff:restype="x-GENERIC/SUBHEADER">Disabled</string>
    <string name="data_usage" xliff:restype="x-GENERIC/SUBHEADER">Data usage</string>
    <string name="data_usage_text" xliff:restype="x-_UNLIMITED">Your device must be connected to a Wi-Fi network.\nIf you use a metered or paid Wi-Fi connection, you may be charged for the data usage.\n\nFor more info, check with your Internet service provider.</string>
    <string name="whats_new" xliff:restype="x-GENERIC/DIALOG/TITLE">What\'s New</string>
    <string name="whats_new_contribution_status" xliff:restype="x-_UNLIMITED">Now you can see the required conditions status to run Folding@Home.</string>
    <string name="whats_new_disable_indicator" xliff:restype="x-_UNLIMITED">Indicates that the app is disabled.</string>
    <string name="whats_new_conditions_indicator" formatted="false" xliff:restype="x-_UNLIMITED">Indicates that Wi-Fi is ready, but the phone must be connected to a charger and the battery must be 100% charged.</string>
    <string name="whats_new_enable_indicator" xliff:restype="x-_UNLIMITED">Indicates that all requirements are ready.</string>
    <string name="whats_new_power_button" xliff:restype="x-_UNLIMITED">Now it\'s easier to enable or disable the app. You can also see the current status of Folding@Home.</string>
    <string name="whats_new_login" xliff:restype="x-_UNLIMITED">Now you can log in and upload your contributions.</string>
    <string name="whats_new_contribution_indicators" xliff:restype="x-_UNLIMITED">Improved icons to easily keep track of your contribution status.</string>
    <string name="whats_new_research_type" xliff:restype="x-_UNLIMITED">Indicates the research which you are contributing to.</string>
    <string name="whats_new_people_helping" xliff:restype="x-_UNLIMITED">Indicates the number of people using Folding@Home.</string>
    <string name="whats_new_contributed_time" xliff:restype="x-_UNLIMITED">Indicates the total time of your contributions.</string>
    <string name="skip" xliff:restype="x-GENERIC/BUTTON/3BUTTONS">Skip</string>
    <string name="turn_on" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE">Turn on</string>
    <string name="turn_off" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE">Turn off</string>
    <string name="active_research" xliff:restype="x-GENERIC/MENU/OVERFLOW">Active research</string>
    <string name="notification_contribution_time" xliff:restype="x-_UNLIMITED">Thanks. This device has contributed %1$s during the last 24h.</string>
    <string name="action_login" xliff:restype="x-GENERIC/MENU/OVERFLOW">Sign in</string>
    <string name="action_logout" xliff:restype="x-GENERIC/MENU/OVERFLOW">%1$s (Sign out)</string>
    <string name="action_leaderboards" xliff:restype="x-GENERIC/MENU/OVERFLOW">Leaderboards</string>
    <string name="action_achievements" xliff:restype="x-GENERIC/MENU/OVERFLOW">Achievements</string>
    <string name="action_invite_friends" xliff:restype="x-GENERIC/MENU/OVERFLOW">Invite friends</string>
    <string name="notification_service_turn_on" xliff:restype="x-GENERIC/NOTIFICATION/1ACTION">Turn on to keep contributing</string>
    <string name="toast_logout" xliff:restype="x-GENERIC/TOAST/TEXT">Logged out</string>
    <string name="toast_network_unavailable" xliff:restype="x-GENERIC/TOAST/TEXT">Network unavailable</string>
    <string name="paused" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE">Paused</string>
    <string name="action_enable" xliff:restype="x-GENERIC/MENU/OVERFLOW">Enable</string>
    <string name="action_disable" xliff:restype="x-GENERIC/MENU/OVERFLOW">Disable</string>
    <string name="pause" xliff:restype="x-GENERIC/NOTIFICATION/SUBTITLE">Pause</string>
    <string name="new_indicators" xliff:restype="x-_UNLIMITED">New indicators</string>
    <string name="new_power_button" xliff:restype="x-_UNLIMITED">New power button</string>
    <string name="sign_in_google_game_service" xliff:restype="x-GENERIC/BUTTON/1BUTTON">Sign in Google Play™ Games Services</string>
    <string name="view_more" xliff:restype="x-GENERIC/BUTTON/2BUTTONS">View more</string>
    <string name="toast_achievements_disabled" xliff:restype="x-GENERIC/TOAST/TEXT">Sign in to view the achievements!</string>
    <string name="toast_leaderboards_disabled" xliff:restype="x-GENERIC/TOAST/TEXT">Sign in to view the leaderboards!</string>
    <string name="contribution_details" xliff:restype="x-GENERIC/DIALOG/TITLE">Contribution details</string>
    <string name="project_description" xliff:restype="x-GENERIC/DIALOG/TITLE">Project description</string>
    <string name="week" xliff:restype="x-GENERIC/DIALOG/TITLE">Week</string>
    <string name="twitter" translatable="false" xliff:restype="x-_UNLIMITED">Twitter</string>
</resources>