<!--
 Licensed under the LICENSE.
 Copyright 2017, Sony Mobile Communications Inc.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragment_wizard_welcome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarStyle="outsideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_padding_horizontal"
        android:paddingStart="@dimen/activity_padding_horizontal"
        android:paddingTop="@dimen/activity_padding_vertical" >

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-seriff-light"
            android:scrollbars="vertical"
            android:text="@string/whats_new"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:autoLink="web"
            android:drawablePadding="@dimen/padding_small"
            android:drawableTop="@drawable/img_step4_1"
            android:fontFamily="sans-seriff"
            android:scrollbars="vertical"
            android:text="@string/whats_new_disable_indicator"
            android:textAlignment="center"
            android:textColor="@color/sony_gray_text"
            android:textSize="@dimen/wizard_font_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:autoLink="web"
            android:drawablePadding="@dimen/padding_small"
            android:drawableTop="@drawable/img_step4_2"
            android:fontFamily="sans-seriff"
            android:scrollbars="vertical"
            android:text="@string/whats_new_conditions_indicator"
            android:textAlignment="center"
            android:textColor="@color/sony_gray_text"
            android:textSize="@dimen/wizard_font_size_small" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            android:autoLink="web"
            android:drawablePadding="@dimen/padding_small"
            android:drawableTop="@drawable/img_step4_3"
            android:fontFamily="sans-seriff"
            android:scrollbars="vertical"
            android:text="@string/whats_new_enable_indicator"
            android:textAlignment="center"
            android:textColor="@color/sony_gray_text"
            android:textSize="@dimen/wizard_font_size_small" />

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-seriff-light"
            android:scrollbars="vertical"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/new_indicators"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:autoLink="web"
            android:fontFamily="sans-seriff"
            android:scrollbars="vertical"
            android:text="@string/whats_new_contribution_status"
            android:textAlignment="viewStart"
            android:textColor="@color/sony_gray_text"
            android:textSize="@dimen/wizard_font_size_small" />
    </LinearLayout>
</ScrollView>