<!--
 Licensed under the LICENSE.
 Copyright 2017, Sony Mobile Communications Inc.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/fragment_wizard_welcome"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/logos_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/activity_padding_horizontal"
        android:paddingStart="@dimen/activity_padding_horizontal"
        android:weightSum="3" >

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/powered_by"
            android:src="@drawable/img_sony"
            android:layout_marginEnd="@dimen/margin_small" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:contentDescription="@string/powered_by"
            android:src="@drawable/img_stanford"
            android:layout_marginStart="@dimen/margin_small" />
    </LinearLayout>

    <TextView
        android:id="@+id/in_cooperation_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/logos_layout"
        android:layout_marginTop="@dimen/margin_small"
        android:fontFamily="sans-seriff"
        android:gravity="center"
        android:text="@string/powered_by"
        android:textColor="@color/sony_black" />

    <Button
        android:id="@+id/bt_wizard_read_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/in_cooperation_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_x_small"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:minHeight="@dimen/wizard_button_height"
        android:minWidth="@dimen/wizard_button_width"
        android:onClick="onClick"
        android:paddingLeft="@dimen/padding_small"
        android:paddingRight="@dimen/padding_small"
        android:text="@string/read_more"
        android:textColor="@color/sony_black"
        android:textSize="@dimen/text_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bt_wizard_read_more"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:paddingEnd="@dimen/activity_padding_horizontal"
            android:paddingStart="@dimen/activity_padding_horizontal"
            android:src="@drawable/img_step_1" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:scrollbarStyle="outsideInset" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/activity_padding_horizontal"
                android:paddingStart="@dimen/activity_padding_horizontal" >

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-seriff-light"
                    android:scrollbars="vertical"
                    android:text="@string/welcome"
                    android:textAlignment="viewStart" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_small"
                    android:autoLink="web"
                    android:fontFamily="sans-seriff"
                    android:scrollbars="vertical"
                    android:text="@string/wizard_welcome_to_folding_subtitle"
                    android:textAlignment="viewStart"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/wizard_font_size_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:fontFamily="sans-seriff"
                    android:scrollbars="vertical"
                    android:text="@string/wizard_welcome_to_folding_text"
                    android:textAlignment="viewStart"
                    android:textColor="@color/sony_gray_text"
                    android:textSize="@dimen/wizard_font_size_small" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>