<!--
  Licensed under the LICENSE.
  Copyright 2017, Sony Mobile Communications Inc.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fragment_wizard_settings"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_padding_vertical"
              android:paddingTop="@dimen/activity_padding_vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:paddingEnd="@dimen/activity_padding_horizontal"
        android:paddingStart="@dimen/activity_padding_horizontal"
        android:src="@drawable/img_step_2" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <!-- Parent is used to center the scrollview content -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/activity_padding_horizontal"
            android:paddingStart="@dimen/activity_padding_horizontal"
            android:scrollbarStyle="outsideOverlay"
            tools:ignore="UselessParent" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_medium"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="6" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/wizard_icon_height"
                        android:layout_weight="1"
                        android:contentDescription="@string/private_date_safe_title"
                        android:src="@drawable/ic_info_private" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical"
                        android:gravity="start" >

                        <TextView
                            style="@style/text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/private_date_safe_title"
                            android:textAlignment="viewStart" />

                        <TextView
                            style="@style/text_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/private_date_safe_text"
                            android:textAlignment="viewStart" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/wizard_line_height"
                    android:background="@color/sony_gray_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="6" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/wizard_icon_height"
                        android:layout_weight="1"
                        android:contentDescription="@string/no_cost_mobile_data_title"
                        android:src="@drawable/ic_info_wifi" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical" >

                        <TextView
                            style="@style/text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_cost_mobile_data_title"
                            android:textAlignment="viewStart" />

                        <TextView
                            style="@style/text_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_cost_mobile_data_text"
                            android:textAlignment="viewStart" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/wizard_line_height"
                    android:background="@color/sony_gray_line" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_small"
                    android:layout_marginTop="@dimen/margin_small"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:weightSum="6" >

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/wizard_icon_height"
                        android:layout_weight="1"
                        android:contentDescription="@string/battery_not_drained_title"
                        android:src="@drawable/ic_info_battery" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:orientation="vertical"
                        android:gravity="start" >

                        <TextView
                            style="@style/text_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/battery_not_drained_title"
                            android:textAlignment="viewStart" />

                        <TextView
                            style="@style/text_subtitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/battery_not_drained_text"
                            android:textAlignment="viewStart" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/wizard_line_height"
                    android:background="@color/sony_gray_line" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</LinearLayout>